--- a/main.css
+++ b/main.css
@@ -4,14 +4,18 @@ html{
 }
 body{
     
-    background-image: linear-gradient(bottom, rgba(9, 9, 220, 0), rgba(9, 9, 220, 0.8));
-    background-image: -webkit-linear-gradient(bottom, rgba(9, 9, 220, 0), rgba(9, 9, 220, 0.8));
-    background-image: -moz-linear-gradient(bottom, rgba(9, 9, 220, 0), rgba(9, 9, 220, 0.8));
-    background-image: -o-linear-gradient(bottom, rgba(9, 9, 220, 0), rgba(9, 9, 220, 0.8));
-    background-image: -ms-linear-gradient(bottom, rgba(9, 9, 220, 0), rgba(9, 9, 220, 0.8));
+    background-image: linear-gradient(bottom, rgba(238, 254, 62, 0.2), rgba(238, 254, 62, 0.6));
+    background-image: -webkit-linear-gradient(bottom, rgba(238, 254, 62, 0.2), rgba(238, 254, 62, 0.6));
+    background-image: -moz-linear-gradient(bottom, rgba(238, 254, 62, 0.2), rgba(238, 254, 62, 0.6));
+    background-image: -o-linear-gradient(bottom, rgba(238, 254, 62, 0.2), rgba(238, 254, 62, 0.6));
+    background-image: -ms-linear-gradient(bottom, rgba(238, 254, 62, 0.2), rgba(238, 254, 62, 0.6));
+    #eefe3e
     
 }
 table{
     text-align: center;
+    margin: 30px;
     font-size: 15pt;
+    background: white;
+    box-shadow: 3px 5px 50px 1px rgba(0,0,0,1);
 }
